--- a/Tugas /Tugas Pertemuan 1/1.1 Penjumlahan.md
+++ b/Tugas /Tugas Pertemuan 1/1.1 Penjumlahan.md
@@ -1,6 +1,6 @@
 ## Deskripsi
 
-Pak Jono memiliki A ekor bebek jantan dan B ekor bebek betina. Tentukan banyaknya total bebek yang dimiliki Pak Dengklek.
+Pak Jono memiliki A ekor bebek jantan dan B ekor bebek betina. Tentukan banyaknya total bebek yang dimiliki Pak Jono.
 
 ## Format Masukan
 
