--- a/Tugas /Tugas Pertemuan 1/1.2 BurungBeo.md
+++ b/Tugas /Tugas Pertemuan 1/1.2 BurungBeo.md
@@ -1,11 +1,11 @@
 
 ## Deskripsi
 
-Di samping memelihara bebek, Pak Dengklek pun memiliki seekor burung beo kesayangan. Burung beo ini selalu mengulangi secara persis apapun ucapan yang dilontarkan kepadanya.
+Di samping memelihara bebek, Pak Jono pun memiliki seekor burung beo kesayangan. Burung beo ini selalu mengulangi secara persis apapun ucapan yang dilontarkan kepadanya.
 
-Pak Dengklek iseng-iseng ingin memiliki sebuah program komputer yang menirukan sifat burung beo tersebut. Ia ingin memiliki program yang menerima sebuah kalimat, kemudian mencetak kembali kalimat tersebut secara persis.
+Pak Jono iseng-iseng ingin memiliki sebuah program komputer yang menirukan sifat burung beo tersebut. Ia ingin memiliki program yang menerima sebuah kalimat, kemudian mencetak kembali kalimat tersebut secara persis.
 
-Bantulah Pak Dengklek membuat program tersebut.
+Bantulah Pak Jono membuat program tersebut.
 
 ## Format Input
 
@@ -18,11 +18,11 @@ Sebuah baris berisi sebuah kalimat yang sama persis dengan masukan.
 ## Contoh Input
 
 ```
-Ayo belajar konsep pemrograman dengan bahasa C dengan Pak Dengklek
+Ayo belajar konsep pemrograman dengan bahasa C dengan Mas Nabil
 ```
 
 ## Contoh Output
 
 ```
-Ayo belajar konsep pemrograman dengan bahasa C dengan pak Dengklek
+Ayo belajar konsep pemrograman dengan bahasa C dengan Mas Nabil
 ```
