Update 1.3 BagiBagi Bebek.md

--- a/Tugas /Tugas Pertemuan 1/1.3 BagiBagi Bebek.md
+++ b/Tugas /Tugas Pertemuan 1/1.3 BagiBagi Bebek.md
@@ -1,9 +1,9 @@
 
 ## Deskripsi
 
-Pak Dengklek memiliki N ekor bebek. Ia ingin membagi-bagikan bebek-bebeknya tersebut sama rata kepada M orang temannya. Pak Dengklek juga menyadari bahwa bisa saja terdapat sisa bebek karena banyaknya bebek tidak habis dibagi banyaknya temannya.
+Pak Samsudin memiliki N ekor bebek. Ia ingin membagi-bagikan bebek-bebeknya tersebut sama rata kepada M orang temannya. Pak Samsudin juga menyadari bahwa bisa saja terdapat sisa bebek karena banyaknya bebek tidak habis dibagi banyaknya temannya.
 
-Bantulah Pak Dengklek untuk menentukan berapa ekor bebek yang harus dia berikan kepada masing-masing temannya, dan berapa sisanya.
+Bantulah Pak Samsudin untuk menentukan berapa ekor bebek yang harus dia berikan kepada masing-masing temannya, dan berapa sisanya.
 
 ## Format Input
 
