Update 1.3 BagiBagi Bebek.md

--- a/Tugas /Tugas Pertemuan 1/1.3 BagiBagi Bebek.md
+++ b/Tugas /Tugas Pertemuan 1/1.3 BagiBagi Bebek.md
@@ -11,7 +11,7 @@ Sebuah baris berisi dua buah bilangan bulat N dan M.
 
 ## Format Output
 
-Baris pertama berisi `masing-masing A`, dengan A adalah banyaknya bebek yang diberikan kepada masing-masing temannya. Baris kedua berisi `bersisa B`, dengan B adalah banyaknya sisa bebek Pak Dengklek
+Baris pertama berisi `masing-masing A`, dengan A adalah banyaknya bebek yang diberikan kepada masing-masing temannya. Baris kedua berisi `bersisa B`, dengan B adalah banyaknya sisa bebek Pak Samsudin
 
 ## Contoh Input 1
 
